--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,12 +1,14 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:themes="clr-namespace:Microshaoft;assembly=ThemesManager"
-    themes:ThemesManager.Theme="{Binding ElementName=themes, Path=SelectedItem}"
+
     Loaded="Window_Loaded"
     Background="{DynamicResource WindowBackgroundBrush}"
-        SizeToContent="Height"
-    Title="WPF.Themes" MinHeight="330" Width="732">
+    SizeToContent="Height"
+    Title="WPF.Themes" 
+    MinHeight="330"
+    Width="732"
+>
     <StackPanel>
         <Border Background="White" Height="30" BorderBrush="Black" BorderThickness="0,0,0,1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
